Fix overflow

--- a/frontend/src/components/ChatBox/ChatBox.css
+++ b/frontend/src/components/ChatBox/ChatBox.css
@@ -1,27 +1,3 @@
-/* .chat-box-div {
-    width: 100%;
-    height: 100%;
-    border: solid 1px #ffffff;
-    background-color: #ffffffd9;
-    border-radius: 2%;
-    font-family: Sans-serif;
-    box-shadow: 3px 10px 10px 10px #00000009;
-}
-
-.userInputBar {
-    width: auto;
-    height: auto;
-    max-width: 80%;
-    color: #00274C;
-    border-radius: 8px 0px 8px 8px;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.116);
-    padding: 12px;
-    line-height: 100%;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    text-align: justify;
-} */
-
 .chat-box-wrapper {
     height: 100vh;
     display: grid;
@@ -35,6 +11,11 @@
     align-self: center;
     justify-self: center;
     display: grid;
+    overflow: hidden;
+}
+
+.chat-box-card {
+    overflow: hidden;
 }
 
 .chat-inner-wrapper {
